--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   },
   "homepage": "https://github.com/nut-tree/secrets#readme",
   "devDependencies": {
-    "@types/jest": "^24.0.11",
-    "@types/node": "^12.0.1",
-    "jest": "^24.5.0",
-    "ts-jest": "24.0.2",
-    "tslint": "^5.14.0",
-    "typescript": "^3.3.3333",
-    "version-bump-prompt": "^5.0.4"
+    "@types/jest": "24.0.23",
+    "@types/node": "12.12.14",
+    "jest": "24.9.0",
+    "ts-jest": "24.2.0",
+    "tslint": "5.20.1",
+    "typescript": "3.7.2",
+    "version-bump-prompt": "5.0.6"
   }
 }
